# CommandLineProgrammingLanguages

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  mkdocs_requirements.txt  pyproject.toml
chapter_1/: index.html
chapter_2/: index.html
clpl/: cli.py
code/csharp/HelloWorld/src/HelloWorldApp/: Program.cs
code/csharp/hello_world/: .gitignore  HelloWorld.sln
code/csharp/hello_world/tests/HelloWorldTests/: HelloWorldTests.csproj  UnitTest1.cs
code/go/hello_world/: hello_world  main_test.go
code/python/hello_world/: pyproject.toml
code/python/hello_world/tests/: test_hello.py
code/rust/echo_/: Cargo.toml
code/rust/hello_world/tests/: test_hello_world.rs
docs/: chapter_1.md  chapter_2.md  index.md
