[tool.poetry]
name = "clpl"
version = "0.1.0"
description = "Learn various programming languages by building command-line applications"
authors = ["Aditya Gudimella <aditya.gudimella@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dependencies.docbook]
git = "git@github.com:AdityaGudimella/docbook.git"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
